--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "type": "git",
     "url": "git+https://github.com/MyUnisoft/httpie.git"
   },
+  "engines": {
+    "node": ">=14"
+  },
   "keywords": [],
   "files": [
     "dist"
