--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^16.4.3",
     "@types/statuses": "^2.0.0",
     "dotenv": "^10.0.0",
+    "fastify": "^3.20.1",
     "jest": "^27.0.6",
     "p-ratelimit": "^1.0.1",
     "ts-jest": "^27.0.4",
