refactor: use nodesecure/eslint-config instead of myunisoft private eslint-config

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "@myunisoft/eslint-config",
+    "extends": "@nodesecure/eslint-config",
     "rules": {
       "@typescript-eslint/no-non-null-assertion": "off"
     }
