--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "homepage": "https://github.com/MyUnisoft/httpie#readme",
   "devDependencies": {
-    "@myunisoft/eslint-config": "^1.6.2",
+    "@nodesecure/eslint-config": "^1.3.1",
     "@slimio/is": "^1.5.1",
     "@types/content-type": "^1.1.5",
     "@types/jest": "^27.4.0",
