--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,12 @@
     "compilerOptions": {
       "declaration": true,
       "strictNullChecks": true,
-      "target": "ES2019",
+      "target": "ES2021",
       "outDir": "dist",
       "module": "commonjs",
       "moduleResolution": "node",
+      "skipLibCheck": true,
+      "skipDefaultLibCheck": true,
       "esModuleInterop": true,
       "sourceMap": true,
       "rootDir": "src"
