--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@openally/result": "^1.2.0",
     "content-type": "^1.0.5",
     "lru-cache": "^10.0.0",
     "statuses": "^2.0.1",
