--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,6 @@ jobs:
       uses: actions/setup-node@8f152de45cc393bb48ce5d89d36b731f54556e65 # v4.0.0
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
     - run: npm i
-    - run: npm run build --if-present
+    - run: npm run build
     - run: npm test
