--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,19 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: daily
+      interval: monthly
+    groups:
+      github-actions:
+        patterns:
+          - "*"
 
   - package-ecosystem: npm
     directory: /
+    versioning-strategy: widen
     schedule:
-      interval: daily
+      interval: weekly
+    groups:
+      dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
