--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,9 @@
 {
-    "compilerOptions": {
-      "declaration": true,
-      "strictNullChecks": true,
-      "target": "ES2021",
-      "outDir": "dist",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "skipLibCheck": true,
-      "skipDefaultLibCheck": true,
-      "esModuleInterop": true,
-      "sourceMap": true,
-      "rootDir": "src"
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "dist"]
-  }
+  "extends": "@openally/config.typescript/cjs",
+  "compilerOptions": {
+    "outDir": "dist",
+    "rootDir": "./src",
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
+}
